# daemon-cli

./: AGENTS.md  README.md  package.json  plan.md  pnpm-lock.yaml  spec.md  test-plutil.sh  test.plist  tsconfig.json
governor/: Cargo.toml
governor/src/: main.rs
src/: cli.ts
src/commands/: create.ts  edit.ts  list.ts  logs.ts  remove.ts  restart.ts  stop.ts  tui.tsx
src/lib/: completion.ts  launchd.ts  logrotate.ts  paths.ts  wrapper.ts
src/utils/: process.ts  ui.ts
