[package]
name = "daemon-governor"
version = "1.0.0"
edition = "2021"
authors = ["Alec <alec@example.com>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
dirs = "5.0"
hex = "0.4"
anyhow = "1.0"
libc = "0.2"
